--- a/add-signature.html
+++ b/add-signature.html
@@ -165,7 +165,7 @@
       margin-bottom: 10px;
     }
 
-    .input-container input[type="file"] {
+    .input-container input[type="file"], .input-container input[type="range"] {
       width: 100%;
       max-width: 300px;
       padding: 10px;
@@ -178,7 +178,24 @@
       transition: all 0.3s ease;
     }
 
-    .input-container input[type="file"]:focus {
+    .input-container input[type="range"] {
+      -webkit-appearance: none;
+      height: 8px;
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 4px;
+    }
+
+    .input-container input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      width: 20px;
+      height: 20px;
+      background: #5b86e5;
+      border-radius: 50%;
+      cursor: pointer;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
+
+    .input-container input[type="range"]:focus {
       border-color: #5b86e5;
       box-shadow: 0 0 8px rgba(91, 134, 229, 0.3);
     }
@@ -191,30 +208,22 @@
 
     .preview-container {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
       gap: 20px;
       margin: 20px 0;
-      max-height: 400px;
+      max-height: 500px;
       overflow-y: auto;
       padding: 10px;
-      border-radius: 8px;
-      background: rgba(255, 255, 255, 0.1);
     }
 
     .preview-item {
       position: relative;
       text-align: center;
-      background: rgba(255, 255, 255, 0.15);
-      border-radius: 8px;
-      padding: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
     .preview-item canvas {
       max-width: 100%;
       height: auto;
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      border-radius: 4px;
       cursor: pointer;
     }
 
@@ -231,7 +240,7 @@
     }
 
     .signature img {
-      max-width: 100px; /* Fixed width for signature */
+      width: 100px; /* Default width, adjusted by slider */
       height: auto;
       opacity: 0.8;
       pointer-events: none;
@@ -356,11 +365,11 @@
       .file-info {
         font-size: 0.9rem;
       }
-      .input-container input[type="file"] {
+      .input-container input[type="file"], .input-container input[type="range"] {
         max-width: 100%;
       }
       .preview-container {
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
       }
     }
   </style>
@@ -383,6 +392,11 @@
       <p>Upload a PNG/JPEG image of your signature</p>
     </div>
     <p class="file-info" id="imageInfo"></p>
+    <div class="input-container">
+      <label for="signatureSize">Adjust Signature Size: <span id="sizeValue">100px</span></label>
+      <input type="range" id="signatureSize" min="50" max="200" value="100">
+      <p>Slide to adjust the signature width (50-200px)</p>
+    </div>
     <div class="preview-container" id="previewContainer"></div>
     <div class="progress-container" id="progressContainer">
       <div class="progress-bar" id="progressBar"></div>
@@ -398,6 +412,8 @@
       const uploadArea = document.getElementById('uploadArea');
       const pdfInput = document.getElementById('pdfUpload');
       const signatureImage = document.getElementById('signatureImage');
+      const signatureSize = document.getElementById('signatureSize');
+      const sizeValue = document.getElementById('sizeValue');
       const generateBtn = document.getElementById('generateBtn');
       const fileInfoDisplay = document.getElementById('fileInfo');
       const imageInfoDisplay = document.getElementById('imageInfo');
@@ -408,9 +424,20 @@
       let selectedPdf = null;
       let selectedImage = null;
       let pdfDoc = null;
-      let signaturePositions = []; // Array to store signature positions per page
+      let signaturePositions = []; // Array to store signatures per page
       let signatureImgUrl = null;
+      let signatureWidth = 100; // Default signature width in pixels
       let vibrationInterval = null;
+
+      // Update signature size display
+      signatureSize.addEventListener('input', () => {
+        signatureWidth = parseInt(signatureSize.value);
+        sizeValue.textContent = `${signatureWidth}px`;
+        // Update existing signatures' size
+        document.querySelectorAll('.signature img').forEach(img => {
+          img.style.width = `${signatureWidth}px`;
+        });
+      });
 
       // Format file size to human-readable format
       function formatFileSize(bytes) {
@@ -512,7 +539,7 @@
         fileInfoDisplay.style.display = 'block';
         startVibration();
         await loadPdfPreviews(file);
-        generateBtn.disabled = !selectedImage || signaturePositions.length === 0;
+        generateBtn.disabled = !selectedImage || signaturePositions.every(arr => arr.length === 0);
         pdfInput.value = ''; // Reset input
       }
 
@@ -530,7 +557,7 @@
         signatureImgUrl = URL.createObjectURL(file);
         imageInfoDisplay.textContent = `Signature: ${file.name} (${formatFileSize(file.size)})`;
         imageInfoDisplay.style.display = 'block';
-        generateBtn.disabled = !selectedPdf || signaturePositions.length === 0;
+        generateBtn.disabled = !selectedPdf || signaturePositions.every(arr => arr.length === 0);
         startVibration();
         signatureImage.value = ''; // Reset input
       }
@@ -541,12 +568,12 @@
         const arrayBuffer = await file.arrayBuffer();
         pdfDoc = await PDFLib.PDFDocument.load(arrayBuffer);
         const totalPages = pdfDoc.getPageCount();
-        signaturePositions = new Array(totalPages).fill(null); // Initialize signature positions
+        signaturePositions = new Array(totalPages).fill().map(() => []); // Initialize as array of arrays for multiple signatures
 
         const pdfJsDoc = await pdfjsLib.getDocument({ data: arrayBuffer }).promise;
         for (let i = 1; i <= totalPages; i++) {
           const page = await pdfJsDoc.getPage(i);
-          const viewport = page.getViewport({ scale: 0.5 }); // Scale for preview
+          const viewport = page.getViewport({ scale: 0.75 }); // Increased scale for larger previews
           const canvas = document.createElement('canvas');
           canvas.width = viewport.width;
           canvas.height = viewport.height;
@@ -572,24 +599,19 @@
 
       // Add signature to canvas
       function addSignature(pageIndex, event, canvas, viewport) {
-        // Remove existing signature on this page, if any
-        if (signaturePositions[pageIndex]) {
-          const existingSignature = document.getElementById(`signature-${pageIndex}`);
-          if (existingSignature) existingSignature.remove();
-          signaturePositions[pageIndex] = null;
-        }
-
         const rect = canvas.getBoundingClientRect();
         const x = event.clientX - rect.left;
         const y = event.clientY - rect.top;
+        const signatureId = `signature-${pageIndex}-${Date.now()}`; // Unique ID for each signature
         const signature = document.createElement('div');
         signature.className = 'signature';
-        signature.id = `signature-${pageIndex}`;
+        signature.id = signatureId;
         signature.style.left = `${x}px`;
         signature.style.top = `${y}px`;
 
         const img = document.createElement('img');
         img.src = signatureImgUrl;
+        img.style.width = `${signatureWidth}px`;
         signature.appendChild(img);
 
         const deleteBtn = document.createElement('button');
@@ -597,8 +619,8 @@
         deleteBtn.innerHTML = '<i class="fas fa-trash"></i>';
         deleteBtn.addEventListener('click', () => {
           signature.remove();
-          signaturePositions[pageIndex] = null;
-          generateBtn.disabled = signaturePositions.every(pos => pos === null);
+          signaturePositions[pageIndex] = signaturePositions[pageIndex].filter(pos => pos.id !== signatureId);
+          generateBtn.disabled = signaturePositions.every(arr => arr.length === 0);
           if ('vibrate' in navigator) {
             navigator.vibrate(50); // Short vibration on delete
           }
@@ -608,14 +630,16 @@
         canvas.parentElement.appendChild(signature);
 
         // Store signature position (scaled to PDF coordinates)
-        const scale = 1 / 0.5; // Inverse of preview scale
-        signaturePositions[pageIndex] = {
+        const scale = 1 / 0.75; // Inverse of preview scale
+        signaturePositions[pageIndex].push({
+          id: signatureId,
           x: x * scale,
           y: (canvas.height - y) * scale, // Convert to PDF coordinates (bottom-left origin)
-        };
+          width: signatureWidth * scale, // Scale width to PDF coordinates
+        });
 
         // Enable dragging
-        makeDraggable(signature, pageIndex, canvas);
+        makeDraggable(signature, pageIndex, canvas, signatureId);
 
         generateBtn.disabled = false;
         if ('vibrate' in navigator) {
@@ -624,7 +648,7 @@
       }
 
       // Make signature draggable
-      function makeDraggable(element, pageIndex, canvas) {
+      function makeDraggable(element, pageIndex, canvas, signatureId) {
         let isDragging = false;
         let currentX;
         let currentY;
@@ -661,11 +685,13 @@
           element.style.top = `${newY}px`;
 
           // Update signature position (scaled to PDF coordinates)
-          const scale = 1 / 0.5; // Inverse of preview scale
-          signaturePositions[pageIndex] = {
-            x: newX * scale,
-            y: (canvas.height - newY) * scale, // Convert to PDF coordinates
-          };
+          const scale = 1 / 0.75; // Inverse of preview scale
+          const signature = signaturePositions[pageIndex].find(pos => pos.id === signatureId);
+          if (signature) {
+            signature.x = newX * scale;
+            signature.y = (canvas.height - newY) * scale;
+            signature.width = signatureWidth * scale; // Update width if changed
+          }
         }
 
         function stopDragging() {
@@ -683,19 +709,13 @@
         progressBar.style.width = `${percent}%`;
       }
 
-      // Generate button click handler
-      generateBtn.addEventListener('click', () => {
-        stopVibration();
-        generateDocument();
-      });
-
       // Generate PDF with signatures
       async function generateDocument() {
         if (!selectedPdf || !selectedImage) {
           alert('Please upload both a PDF and a signature image');
           return;
         }
-        if (signaturePositions.every(pos => pos === null)) {
+        if (signaturePositions.every(arr => arr.length === 0)) {
           alert('Please add at least one signature to a page');
           return;
         }
@@ -722,15 +742,14 @@
 
           // Add signatures to pages
           for (let i = 0; i < pages.length; i++) {
-            if (signaturePositions[i]) {
-              const page = pages[i];
-              const { width, height } = page.getSize();
-              const { x, y } = signaturePositions[i];
-              const imgWidth = 100; // Fixed width for signature in PDF
+            const page = pages[i];
+            const { width, height } = page.getSize();
+            for (const signature of signaturePositions[i]) {
+              const imgWidth = signature.width; // Use stored width (scaled to PDF)
               const imgHeight = (imgWidth / image.width) * image.height; // Maintain aspect ratio
               page.drawImage(image, {
-                x: x,
-                y: y - imgHeight, // Adjust for PDF bottom-left origin
+                x: signature.x,
+                y: signature.y - imgHeight, // Adjust for PDF bottom-left origin
                 width: imgWidth,
                 height: imgHeight,
                 opacity: 0.8, // Signature opacity
